Closed
Bug 1623332
Opened 6 years ago
Closed 6 years ago
Remove about:library stub page
Categories
(Firefox :: Messaging System, defect)
Firefox
Messaging System
Tracking
()
VERIFIED
FIXED
Firefox 76
| Tracking | Status | |
|---|---|---|
| firefox76 | --- | verified |
People
(Reporter: Gijs, Assigned: Gijs)
References
(Blocks 3 open bugs)
Details
Attachments
(1 file)
The stub was added 2 years ago. Since then, we've repeatedly thought that we'll do something there "soon", and it's repeatedly not happened. If/when we do, people can just revert the commit removing this page. In the meantime, we shouldn't be shipping something unusable to people.
| Assignee | ||
Comment 1•6 years ago
|
||
Pushed by gijskruitbosch@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/5d668145cc2f
remove the non-functional about:library stub, r=jaws
Comment 3•6 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 76
Comment 4•6 years ago
|
||
I have verified that this issue is no longer reproducible with the latest Firefox Nightly (76.0a1 Build ID - 20200320095353) installed, on Windows 10 x64, Ubuntu 18.04 x64 and Mac 10.15.3. Now, the "about:library" page is no longer displayed.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•