Bug 1623332 - remove the non-functional about:library stub, r=jaws

Differential Revision: https://phabricator.services.mozilla.com/D67323

--HG--
extra : moz-landing-system : lando